# dab-rtl

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DAB.md  DEPENDENCIES.md  Dockerfile  LICENSE  README.md  SECURITY.md  Task.md  deny.toml  security_advices.md  security_checklist.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  epic.md  feature.md  task.md
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  security.yml
crates/app/: Cargo.toml
crates/app/src/: cache.rs  countries.rs  main.rs  pipeline.rs  tui.rs
crates/app/tests/: podman_build.rs
crates/audio/: Cargo.toml  build.rs
crates/audio/src/: decode.rs  fdk.rs  lib.rs
crates/fec/: Cargo.toml
crates/fec/src/: depuncturer.rs  lib.rs  viterbi.rs
crates/ofdm/: Cargo.toml
crates/ofdm/src/: demod.rs  interleaver.rs  lib.rs  params.rs  sync.rs
crates/ofdm/tests/: coarse_offset_search.rs  iq_diagnostic.rs  iq_pipeline.rs  synthetic_fic.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: ensemble.rs  fib.rs  fic.rs  lib.rs  msc.rs  pad.rs
crates/sdr/: Cargo.toml
crates/sdr/src/: lib.rs
testdata/: dab_fic_decode.py  dab_roundtrip.py
