[workspace]
resolver = "2"
members = [
    "crates/app",
    "crates/sdr",
    "crates/ofdm",
    "crates/fec",
    "crates/protocol",
    "crates/audio",
]

[workspace.package]
version    = "0.1.0"
edition    = "2021"
license    = "MIT OR Apache-2.0"
repository = "https://github.com/roptaty/dab-rtl"

[workspace.dependencies]
num-complex = "0.4"
rustfft    = "6"
log        = "0.4"
thiserror  = "1"
