[package]
name = "dab-rtl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dab-rtl"
path = "src/main.rs"

[dependencies]
sdr      = { path = "../sdr" }
ofdm     = { path = "../ofdm" }
fec      = { path = "../fec" }
protocol = { path = "../protocol" }
audio    = { path = "../audio" }
num-complex = "0.4"
clap        = { version = "4", features = ["derive"] }
ratatui     = "0.26"
crossterm   = "0.27"
log         = "0.4"
env_logger  = "0.11"
