[package]
name        = "dab-rtl"
description = "DAB/DAB+ software-defined radio receiver for RTL-SDR hardware"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[[bin]]
name = "dab-rtl"
path = "src/main.rs"

[dependencies]
sdr      = { path = "../sdr" }
ofdm     = { path = "../ofdm" }
fec      = { path = "../fec" }
protocol = { path = "../protocol" }
audio    = { path = "../audio" }
num-complex = "0.4"
clap        = { version = "4", features = ["derive"] }
ratatui     = "0.26"
crossterm   = "0.27"
log         = "0.4"
env_logger  = "0.11"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

[dev-dependencies]
tempfile = "3"
