[package]
name        = "audio"
description = "DAB audio output: cpal ALSA sink and symphonia MP2/AAC decoder"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
cpal      = "0.15"
log       = "0.4"
thiserror = "1"
symphonia = { version = "0.5", default-features = false, features = ["mpa"] }
