[package]
name        = "audio"
description = "DAB audio output: cpal ALSA sink and symphonia MP2/AAC decoder"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[features]
# Link the system libfdk-aac library for DAB+ HE-AAC v2 decoding.
# Requires libfdk-aac-dev on Debian/Ubuntu.
# When disabled, DAB+ scanning still works but audio playback is silenced.
fdk-aac = []

[dependencies]
cpal      = "0.15"
log       = "0.4"
thiserror = "1"
symphonia = { version = "0.5", default-features = false, features = ["mpa"] }
