[package]
name        = "ofdm"
description = "DAB Mode I OFDM demodulator: frame sync, FFT, DQPSK, deinterleaver"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
num-complex = "0.4"
rustfft = "6"
log = "0.4"
thiserror = "1"

[dev-dependencies]
fec = { path = "../fec" }
