[package]
name        = "protocol"
description = "DAB FIC/FIB/FIG parser and MSC scheduler for ensemble and service metadata"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
fec = { path = "../fec" }
log = "0.4"
thiserror = "1"
