[package]
name        = "sdr"
description = "RTL-SDR IQ acquisition and Complex32 streaming for dab-rtl"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
num-complex = "0.4"
log = "0.4"
thiserror = "1"
rtlsdr_mt = { version = "2.1.0-rc1" }
